--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -21,7 +21,10 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
-        
+      
+    - name: Run docker-compose without tests
+      run: docker-compose up -d  
+    
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
