--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -13,27 +13,26 @@ jobs:
     strategy:
       max-parallel: 3
       matrix:
-        python-version: [3.9]
+        python-version: [ 3.9 ]
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
-      with:
-        python-version: ${{ matrix.python-version }}
-      
-    - name: Run docker-compose without tests
-      run: docker-compose up -d  
-    
-    - name: Install Dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        
-    - name: Run Portal App Tests
-      run: |
-         python manage.py test portal/tests -v 2
-         
-    - name: Run News App Tests
-      run: |
-         python manage.py test news/tests -v 2
+      - uses: actions/checkout@v3
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v3
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Run docker-compose without tests
+        run: docker-compose up -d
+
+      - name: Install Dependencies
+        run: python -m pip install --upgrade pip && pip install -r requirements.txt
+
+      - name: Update migrations
+        run: rm -rf favorite/migrations && rm -rf news/migrations && rm -rf portal/migrations && python manage.py makemigrations && python manage.py migrate
+
+      - name: Run Portal App Tests
+        run: python manage.py test portal/tests -v 2
+
+      - name: Run News App Tests
+        run: python manage.py test news/tests -v 2
